--- a/src/app.json
+++ b/src/app.json
@@ -5,7 +5,7 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "哈哈哈哈",
+    "navigationBarTitleText": "周公解梦",
     "navigationBarTextStyle": "black"
   },
   "tabBar": {
